# opentpm

./: ProjectHome.md
libtpm/: Makefile.am  README  README_windows.txt  aclocal.m4  comp-sockets.sh  config.status  configure.in  libtool
libtpm/autom4te.cache/: output.0  output.1  traces.0  traces.1
libtpm/lib/: Makefile  delegation.c  keys.c  keyswap.c  makefile.mak  pcrs.c  tpmfunc.h  tpmutil.c  tpmutil_tty.c  tpmutil_tty_original.c
libtpm/lib/.deps/: auditing.Plo  daa.Plo  dir.Plo  eviction.Plo  hmac.Plo  maintenance.Plo  miscfunc.Plo  oiaposap.Plo  owner.Plo  pcrs.Plo  raw.Plo  session.Plo  startup.Plo  ticks.Plo  tpmutil.Plo
libtpm/utils/: Makefile  Makefile.in  bindfile.c  calcfuturepcr.c  certifykey.c  certifyselftest.c  chgauth.c  chgtpmauth.c  clearown.c  cmk_createkey.c  cmk_setrestrictions.c  counter_release.c  createek.c  createownerdelegation.c  createrevek.c  delegatemanage.c  dirread.c  disableforceclear.c  disableownerclear.c  flushspecific.c  forceclear.c  getauditdigestsigned.c  getcapability.c  getcontextcount.c  getticks.c  killmaintenancefeature.c  listkeys.c  loadauthcontext.c  loadcontext.c  loadmanumaintpub.c  loadmigrationblob.c  makefile.mak  nv.c  nv_definespace.c  nv_writevalue.c  ownerreadinternalpub.c  ownersetdisable.c  pcrread.c  pcrreset.c  quote.c  (+20 more)
libtpm/utils/.deps/: bindfile.Po  certifykey.Po  certifyselftest.Po  clearown.Po  cmk_createkey.Po  cmk_migrate.Po  cmk_setrestrictions.Po  counter_create.Po  counter_increment.Po  counter_read.Po  counter_release.Po  createownerdelegation.Po  delegatereadtable.Po  dirwrite.Po  enableaudit.Po  evictkey.Po  extend.Po  getcapability.Po  keycontrol.Po  libtpm-config.Po  loadkey.Po  loadmigrationblob.Po  loadownerdelegation.Po  migratekey.Po  nv_definespace.Po  nv_readvalue.Po  nv_writevalue.Po  ownerreadinternalpub.Po  ownersetdisable.Po  pcrread.Po  physicaldisable.Po  physicalenable.Po  quote.Po  quote2.Po  sealfile.Po  sealxfile.Po  selftest.Po  session.Po  setownerinstall.Po  settempdeactivated.Po  (+8 more)
libtpm/utils/modules/: test_binding  test_changeauth  test_context  test_counters  test_maintenance  test_misc  test_ownership  test_pcr  test_selftest  test_signing  test_ticks
opentpm/: README.txt  tis.h
tpm_tools/: opentpm32.sys  opentpm64.sys  provision_tpm.bat
trunk/libtpm/: Makefile  Makefile.in  configure
trunk/libtpm/autom4te.cache/: requests
trunk/libtpm/lib/: Makefile.am  Makefile.in  identity.c
trunk/libtpm/lib/.deps/: bind.Plo  chgauth.Plo  context.Plo  counter.Plo  debug.Plo  delegation.Plo  identity.Plo  keys.Plo  keyswap.Plo  management.Plo  migrate.Plo  nv.Plo  optin.Plo  ownertpmdiag.Plo  rng.Plo  seal.Plo  serialize.Plo  sha.Plo  signature.Plo  testing.Plo  tpmutil_sock.Plo  tpmutil_tty.Plo  tpmutil_unixio.Plo  transport.Plo
trunk/libtpm/utils/: .auditing-0  Makefile.am  cmk_approvema.c  cmk_createticket.c  cmk_loadmigrationblob.c  cmk_migrate.c  counter_calc_incr.c  counter_create.c  counter_increment.c  counter_read.c  createkey.c  createkeydelegation.c  delegatereadtable.c  dirwrite.c  disablepubek.c  dumpkey.c  enableaudit.c  evictkey.c  extend.c  getauditdigest.c  getpubek.c  identity.c  keycontrol.c  libtpm-config.c  loadkey.c  loadkeycontext.c  loadownerdelegation.c  migrate.c  migratekey.c  pcrread.exe.stackdump  physicaldisable.c  physicalenable.c  physicalpresence.c  physicalsetdeactivated.c  readmanumaintpub.c  resetestbit.c  savekeycontext.c  sealfile2.c  sealxfile.c  selftest.c  (+14 more)
trunk/libtpm/utils/.deps/: calcfuturepcr.Po  chgauth.Po  chgtpmauth.Po  cmk_approvema.Po  cmk_createticket.Po  cmk_loadmigrationblob.Po  counter_calc_incr.Po  createek.Po  createkey.Po  createkeydelegation.Po  createrevek.Po  delegatemanage.Po  dirread.Po  disableforceclear.Po  disableownerclear.Po  disablepubek.Po  dumpkey.Po  flushspecific.Po  forceclear.Po  getauditdigest.Po  getauditdigestsigned.Po  getcontextcount.Po  getpubek.Po  getticks.Po  identity.Po  killmaintenancefeature.Po  listkeys.Po  loadauthcontext.Po  loadcontext.Po  loadkeycontext.Po  loadmanumaintpub.Po  migrate.Po  nv.Po  pcrreset.Po  physicalpresence.Po  physicalsetdeactivated.Po  random.Po  readmanumaintpub.Po  resetestbit.Po  resetlockvalue.Po  (+18 more)
trunk/libtpm/utils/modules/: test_auditing  test_basic  test_capability  test_constants  test_createkeys  test_delegation  test_eviction  test_identity  test_migration  test_nvram  test_quote  test_random  test_seal  test_sha  test_transport
trunk/opentpm/: driver.c  driver.h  install_opentpm.bat  sources  tis.c  util.c  util.h
trunk/opentpm/sys/: opentpm.sys
trunk/tpm_tools/: install_opentpm32.bat  install_opentpm64.bat
